--- a/_posts/2014-10-16-gfy-cat.markdown
+++ b/_posts/2014-10-16-gfy-cat.markdown
@@ -11,7 +11,7 @@ Testing 123.
 
 Awesome, this kind of works.  This is my first blog post, hopefully one of many.  In the coming months I'll be posting my experiments, trials, failures, and frustrations with using various front end technologies.  This is record of the things that I'm interested in.  I'm hoping that this will also serve as a platform for me to find others that are interested in similar things.
 
-Initially, I wanted to put a few animated [`x-gifs`][xgifs] in the first post, but the box and the dragon totally hosed the memory.  That's where [gfycat][gfycat] and [`gfy-cat`][gfy-cat] comes in.  I thought, this might be a good candidate for encapsulation in a polymer component.  If you want to give it a try, here's the [source][gfy-cat].  If you have no idea what I'm talking about, click here or scroll down to see the more detailed explanation.
+Initially, I wanted to put a few animated [`x-gifs`][xgifs] in the first post, but the box and the dragon totally hosed the memory.  That's where [gfycat][gfycat] and [`gfy-cat`][gfy-cat] comes in.  I thought, this might be a good candidate for encapsulation in a polymer component.  If you want to give it a try, here's the [source](https://github.com/mattybow/gfy-cat).  If you have no idea what I'm talking about, scroll down to see the more detailed explanation.
 
 ###Demo
 
@@ -34,9 +34,26 @@ Gifs--I love gifs, choosy moms choose gif, but there are several problems with g
 Common solution is to display the gif as a `<video>` element.
 
 [Gfycat][gfycat] does just this.  It is a conversion service that also hosts the converted gifs thru AWS.
+
+###Things I learned
+
+IE and svgs
+
+Firefox and padding bottom
+
+iOS safari and `<video>`
+
+IE and polymer bindings in inline style
+
+grunt path
+
+vulcanization
+
+Firefox `<source>` inside `<video>`
+
  
 
 [flexbox]:   http://css-tricks.com/snippets/css/a-guide-to-flexbox/
 [xgifs]: https://github.com/geelen/x-gif
 [gfycat]: http://gfycat.com/
-[gfy-cat]: http://www.github.com/mattybow
+[gfy-cat]: http://mattbow.com/gfy-cat
